--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:theme="@style/Theme.EcommerceApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.LoginSignUpActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.activity.SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,16 +26,10 @@
         </activity>
         <activity
             android:name=".view.activity.IntroScreenActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".view.activity.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
