--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,19 @@
             android:exported="false" />
         <activity
             android:name=".view.activity.MainActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:scheme="https"
+                    android:host="ecommerce.com"
+                    android:path="/products"
+                    />
+
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
